[package]
name = "rustify-wled"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustify_wled_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
rocket = "0.5.0"
artnet_protocol = "0.4.2"
reqwest = { version = "0.11.24", features = ["blocking"] }
md5 = "0.7.0"
image = "0.24.8"